--- a/settings.json
+++ b/settings.json
@@ -2,6 +2,7 @@
   "daemon": 1,
   "interval": 60,
   "logfile": "/var/log/service-scheduler.log",
+  "timezone": "Asia/Jerusalem",
   "services": [
     {
       "name": "TestService",
